<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fileContent">"File content haven't been loaded,yet."</string>
    <string name="app_name">LocalRecommendation</string>
	<string name="urlDefault">http://blog.usingmiles.com/wp-content/uploads/2012/02/Aiga_restaurant_inv.gif</string>
	<string name="woeidDefault">565346</string>
	<string name="weatherData">Please, insert WOEID and Confirm</string>
	<string name="socialgags">SocialGags</string>
	<string name="weather_view">Weather View</string>
	<string name="confirm_url">Confirm URL</string>
	<string name="next_comment">Next Comment</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="confirm_woeid">Confirm WOEID</string>
	<string name="enter">Log in to Facebook</string>
	<string name="welcome">Welcome</string>
	<string name="todo">TODO</string>
    
	
</resources>