<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <TextView
        android:id="@+id/textviewWeather"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/weatherData" />
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextWOEID"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:inputType="number" 
            android:text = "@string/woeidDefault" >
            

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonConfWOEID"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:text="@string/confirm_woeid" />
        
    </LinearLayout>

</LinearLayout>