<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textviewSGCommentTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/textviewSGCommentDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkBoxMyPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="MyPosts" />
            
            <Button
                android:id="@+id/buttonShare"
                style="@style/buttonStyle1"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal|bottom"
                android:text="Share" />
            
            

            
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewPost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="Comments-Pics from the SocialGags "
        android:scaleType="centerInside" />

    <Button
        android:id="@+id/buttonNextComment"
        style="@style/buttonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/next_comment" />

</FrameLayout>